@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.132 (gritter) 8/31/06
+.\" Sccsid @(#)doc.tr	1.133 (gritter) 8/31/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -1982,8 +1982,9 @@ using \fB\ex\fI\'N\'\fR.\T
 \T'n_.i'6\T	\T'n_.i'\fB&i\fR\T	\T'n_.i'Current indent as set by \fBin\fR.\T
 \T'n_.in'6\T	\T'n_.in'\fB&in\fR\T	\T'n_.in'Current indent including temporary indent, if any.\T
 \T'n_.int'4.2\T	\T'n_.int'\fB&int\fR\T	\T'n_.int'Non-zero if the previous line was interrupted with \fB\ec\fR.\T
-\T'n_.j'4.2\T	\T'n_.j'\fB&j\fR\T	\T'n_.j'Current \fBad\fP mode.\T
+\T'n_.j'4\T	\T'n_.j'\fB&j\fR\T	\T'n_.j'Current \fBad\fP mode.\T
 \T'n_.k'4.1\T	\T'n_.k'\fB&k\fR\T	\T'n_.k'Current output horizontal position.\T
+\T'n_.kc'4.2\T	\T'n_.kc'\fB&kc\fR\T	\T'n_.kc'Output horizontal length of interrupted word, if any.\T
 \T'n_.l'6\T	\T'n_.l'\fB&l\fR\T	\T'n_.l'Current line length.\T
 \T'n_.lt'14\T	\T'n_.lt'\fB&lt\fR\T	\T'n_.lt'Current title length.\T
 \T'n_.lc_ctype'2.1\T	\T'n_.lc_ctype'\fB&lc_ctype\fR\T	\T'n_.lc_ctype'Current \s-1LC_CTYPE\s0 locale [sic].\T
@@ -3048,6 +3049,8 @@ are normally set using the optimum word and line spacings
 unless the last word collected is the first word
 that falls below the optimum spacing,
 which may result in condensed spacing and shaping.
+The horizontal positions in the \fB.k\fR and \fB.x\fR registers
+are always computed using default character and spacing widths.
 .pg
 .tr &&
 An input text line ending with \fB.\fR\^, \fB?\fR, \fB!\fR, or \fB:\fR,
@@ -3075,7 +3078,7 @@ Initial spaces are always retained and also cause a \fIbreak\fR.
 .pg
 With the \fBbrnl\fR request,
 a \fIbreak\fR occurs at the end of each text input line in fill mode,
-except for lines interrupted with \T'e_c'\fB\ec\fR\T.
+except for lines \T'c_intr'interrupted\T with \T'e_c'\fB\ec\fR\T.
 Contrasting to nofill mode,
 text is still adjusted to the line length.
 .pg
@@ -3086,7 +3089,7 @@ line \fIspread out\fR to fill the current line length.
 With the \fBbrpnl\fR request,
 each end of a text input line in fill mode
 causes a \fIbreak\fR and a spread,
-except for lines interrupted with \T'e_c'\fB\ec\fR\T.
+except for lines \T'c_intr'interrupted\T with \T'e_c'\fB\ec\fR\T.
 The meaning of \fB\ep\fR is then changed
 such that a line that it is attached to is \fInot\fR spread;
 this is the only method to achieve a regular \fIbreak\fR without a spread then.
@@ -3104,7 +3107,7 @@ convenient character into the control character
 using \T'tr'\fBtr\fR\T \T'c_trans'(\(sc10.5).\T
 .sc
 .tr &.
-Interrupted text.
+\A'c_intr'Interrupted text.
 The copying of a input line in \fInofill\f (non-fill) mode can be \fIinterrupted\fR
 by terminating
 the partial line with a \A'e_c'\fB\ec\fR.
@@ -3120,6 +3123,9 @@ any partial line will be forced out along with any partial word.
 The \A'n_.int'\fB&int\fR number register
 is set to a non-zero value if the previous line was interrupted
 and to zero otherwise.
+The length of a partial word is ignored
+for the value of the \T'n_.k'\fB&k\fR\T number register in \fIfill\fR mode;
+it is separately available with the \A'n_.kc'\fB&kc\fR register.
 .sc
 .tr &&
 \A'c_kerning'Kerning.
@@ -3910,7 +3916,7 @@ The text may be in-line text or
 text interpolated by inline or trap-invoked macros.
 .bta itc
 \fB&itc\fI|N|xx\fR	\(en	off	E	Set an input-line-count trap
-like \fBit\fR, but ignore line interruptions with \T'e_c'\fB\ec\fR\T
+like \fBit\fR, but ignore \T'c_intr'line interruptions\T with \T'e_c'\fB\ec\fR\T
 when counting lines.
 .bta return
 \fB&return\fR	\(en	\(en	\(en	Immediately return from the current macro to the level above.
@@ -6136,10 +6142,19 @@ Since they are read-write,
 any convenient value can then be assigned
 to the \fB&C\fR and \fB&g\fR registers.
 .pg
-The \fB&x\fR and \fB&y\fR registers
+The \T'n_.x'\fB&x\fR\T and \T'n_.y'\fB&y\fR\T registers
 are read-write in \*(GR compatibility mode;
 they correspond to the emulated \*(GR version number.
 The \fBcp\fR request sets them to 1 and 18, respectively.
+.pg
+The \T'n_.k'\fB&k\fR number register\T behaves differently
+in \*(GR compatibility mode:
+If the preceding text character was a newline,
+the width of a space character is added to the value.
+If the previous line was \T'c_intr'interrupted\T with \T'e_c'\fB\ec\fR\T,
+the length of the partially collected word
+(as in the \T'n_.kc'\fB&kc\fR\T number register)
+is part of the value.
 .pg
 The space width always defaults to the value
 obtained from the font metrics file
